// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product should format price correctly 1`] = `
<div>
  <div
    class="m-5 p-5 border bg-slate-50 rounded-2xl shadow-2xl"
  >
    <div
      class="w-full h-80 mb-4 relative overflow-hidden rounded-2xl"
    >
      <img
        alt="title"
        class="md:hover:scale-125 transition-transform duration-500 ease-out"
        src="image.jpg"
        style="object-fit: cover;"
      />
      <svg-url
        classname="bg-white p-2 rounded-full absolute top-4 right-4 w-10 duration-500 ease-[cubic-bezier(0.95,0.05,0.795,0.035)] transition-colors fill-transparent"
        data-testid="favicon"
      />
    </div>
    <p
      class="text-lg font-bold"
    >
      title
    </p>
    <p
      class="text-md font-semibold text-right my-4 bg-slate-200 rounded-full inline-block px-4 py-1"
      data-testid="price"
    >
      302,45 €
    </p>
    <p>
      description
    </p>
  </div>
</div>
`;

exports[`Product should render correctly 1`] = `
<div>
  <div
    class="m-5 p-5 border bg-slate-50 rounded-2xl shadow-2xl"
  >
    <div
      class="w-full h-80 mb-4 relative overflow-hidden rounded-2xl"
    >
      <img
        alt="title"
        class="md:hover:scale-125 transition-transform duration-500 ease-out"
        src="image.jpg"
        style="object-fit: cover;"
      />
      <svg-url
        classname="bg-white p-2 rounded-full absolute top-4 right-4 w-10 duration-500 ease-[cubic-bezier(0.95,0.05,0.795,0.035)] transition-colors fill-transparent"
        data-testid="favicon"
      />
    </div>
    <p
      class="text-lg font-bold"
    >
      title
    </p>
    <p
      class="text-md font-semibold text-right my-4 bg-slate-200 rounded-full inline-block px-4 py-1"
      data-testid="price"
    >
      300 €
    </p>
    <p>
      description
    </p>
  </div>
</div>
`;

exports[`Product should render correctly with selected 1`] = `
<div>
  <div
    class="m-5 p-5 border bg-slate-50 rounded-2xl shadow-2xl"
  >
    <div
      class="w-full h-80 mb-4 relative overflow-hidden rounded-2xl"
    >
      <img
        alt="title"
        class="md:hover:scale-125 transition-transform duration-500 ease-out"
        src="image.jpg"
        style="object-fit: cover;"
      />
      <svg-url
        classname="bg-white p-2 rounded-full absolute top-4 right-4 w-10 duration-500 ease-[cubic-bezier(0.95,0.05,0.795,0.035)] transition-colors fill-red-500"
        data-testid="favicon"
      />
    </div>
    <p
      class="text-lg font-bold"
    >
      title
    </p>
    <p
      class="text-md font-semibold text-right my-4 bg-slate-200 rounded-full inline-block px-4 py-1"
      data-testid="price"
    >
      300 €
    </p>
    <p>
      description
    </p>
  </div>
</div>
`;
